Correction de bugs, ajout de nouvelles fonctions et commentaires